# trialmind

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
scripts/: generate_data.py  init_db.py  run_features.py  run_pipeline.py  train_dropout.py  train_site_risk.py
tests/: test_agents_llm.py  test_analysis.py  test_dashboard.py  test_dropout.py  test_features.py  test_schema.py  test_site_risk.py  test_synthetic.py
trialmind/: __init__.py  analysis.py  config.py  dashboard.py  features.py  orchestrator.py  synthetic.py
trialmind/agents/: __init__.py  analysis_agent.py  base.py  exec_summary.py  explainability.py  recommendation.py
trialmind/db/: __init__.py  base.py  models.py
trialmind/models/: __init__.py  dropout.py  evaluation.py  site_risk.py
