[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "trialmind"
version = "0.1.0"
description = "An agentic AI pipeline for clinical trial risk modeling"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "SQLAlchemy>=2.0,<2.1",
    "python-dotenv>=1.0",
    "pandas>=2.0",
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "shap>=0.44",
    "matplotlib>=3.7",
    "streamlit>=1.30",
    "anthropic>=0.40",
]

[project.optional-dependencies]
postgres = ["psycopg2-binary>=2.9"]
dev = ["pytest>=7.4"]

[tool.setuptools.packages.find]
include = ["trialmind*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
